# COP4520_Proj

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg_rf.txt
.cache/clangd/index/: main.cpp.2227B87B1BD02A53.idx
RocketLaunchPrediction/: CMakeLists.txt  RocketLaunchPrediction.cpp  RocketLaunchPrediction.h
backups/: RocketLaunchPredictionLINEARoldVersion.cpp  RocketLaunchPredictionSoftmaxRegression.cpp
enc_temp_folder/2a997c8e29e5559458bec4234686f28/: RocketLaunchPrediction.cpp
src/: RocketLaunchPrediction.cpp  RocketLaunchPrediction.h  main.cpp  terminalInterface.cpp
